# cap-reference

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
abel_cap_client/: __init__.py  __main__.py  client.py  example.py
abel_cap_server/: __init__.py  main.py
abel_cap_server/api/: cap_dispatch.py  health.py  meta.py  router.py
abel_cap_server/api/schemas/: health.py
abel_cap_server/api/v1/: router.py
abel_cap_server/api/v1/endpoints/: cap_dispatch.py  health.py
abel_cap_server/cap/: __init__.py  catalog.py  disclosure.py  errors.py  handlers.py  provenance.py  service.py
abel_cap_server/cap/adapters/: __init__.py  common.py  extensions.py  graph.py  intervene.py  observe.py
abel_cap_server/cap/contracts/: __init__.py  extensions.py  graph.py
abel_cap_server/clients/: abel_gateway_client.py
abel_cap_server/core/: config.py  logging.py
abel_cap_server/middlewares/: request_logging.py
docs/: api-reference.md  architecture.md  configuration.md  development.md
tests/: __init__.py  conftest.py  test_cap_client_example.py  test_cap_graph.py  test_cap_protocol_sdk.py  test_config.py  test_health.py
